# sopel-openweathermap

./: .gitignore  .markdownlint.yaml  .travis.yml  LICENSE  README.md  owm-weather.py  requirements.txt  setup.cfg  setup.py
sopel_openweathermap/: __init__.py  plugin.py  utils.py
tests/: test_openweathermap.py
