[metadata]
name = sopel-openweathermap
version = 3.0.1
author = David Pirogov
author_email = 580286+davidpirogov@users.noreply.github.com
description = A Sopel IRC module for looking up the weather using the OpenWeatherMap API
keywords = sopel plugin weather openweathermap bot irc
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidpirogov/sopel-openweathermap
project_urls =
    Bug Tracker = https://github.com/davidpirogov/sopel-openweathermap/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.7, <4
install_requires =
    sopel>=7.1,<8
    pyowm>=3

# package_dir =
#     = openweathermap

# [options.packages.find]
# where = openweathermap

[options.entry_points]
sopel.plugins =
    openweathermap = sopel_openweathermap.plugin
